<?xml version="1.0" encoding="utf-8"?>

<!--
     Copyright (C) 2018 Yahia H. El-Tayeb
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>

    <string name="app_name">أذكار الصباح والمساء</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="morning_azkar_str">"أذكار الصبــاح"</string>
    <string name="evening_azkar_str">"أذكار المســاء</string>
    <!--
    <string name="alkorsy_verse_str">
        "آية الكرسى        "
    </string>
    -->
    <string name="alkorsy_verse_str">
        "آية الكرسى"
    </string>
    <string name="last_page_str">"سور الإخلاص والمعوذتين"</string>
    <string name="desc">this is a png image</string>
    <string name="zoom_in_str"> "تكبيـــــر الخـط"</string>
    <string name="zoom_out_str">"تصغيـــــر الخـط"</string>
    <string name="landscape_str">"تثبيت شاشة أفقى"</string>
    <string name="portrait_str">"تثبيت شاشة رأسى"</string>
    <string name="font_size_str">"تغيير حجم الخط"</string>
    <string name="user_hint">لضبط الإعدادات أضغظ زر القائمة (أو 3 نقط تحت بعض أعلى الشاشة)</string>
    <string name="morning_azkar">
        "أذكار الصباح 

أصبحنا على فِطرَة الإسلام، وكلمة الإخلاص، ودين نبينا محمد (صلى اللَّه عليه وسلم)، وملة أبينا إبراهيم، حنيفا مسلما، وما كان من المشركين

رضِيت باللَّه ربا، وبالإسلام دينا، وبمحمد (صلى اللَّه عليه وسلم) نبيا

اللهم بك أصبحنا، وبك أمسينا، وبك نحيا، وبك نموت، وإليك النشور

لا إله إلا اللَّه وحده لا شريك له، له الملك، وله الحمد، وهو على كل شيء قدير

يا حي يا قيوم برحمتك أستغيث، أصلح لي شأنى كُلَّه، ولا تكلني إلى نفسى طَرْفَةَ عين أبدا

آيه الكرسى

(للتشغيل أضغط مطولا على الشاشة أو أضغط زر القائمة)

اللهم أنت ربي، لا إله إلا أنت، خلقتنى، وأنا عبدُك*، وأنا على عهدك ووعدك ما استطعت، أعوذ بك من شر ما صنعت أبوء لك بنعمتك علىَّ، وأبوء بذنبى، فاغفر لي، فإنه لا يغفر الذنوب إلا أنت

(تقول المرأة { وأنا أَمَتُك } على الراجح)

اللهم فاطِرَ السموات والأرض، عالم الغيب والشهادة، رب كل شىء ومليكه، أشهد أن لا إله إلا أنت، أعوذ بك من شر نفسي، وشر الشيطان وشِركِهِ*، وأن أقترف على نفسي سوءا، أو أَجُرَّهُ إلى مسلم

(أى ما يدعو إليه من الشرك باللَّه)

أصبحنا، وأصبح الملك للَّه، والحمد للَّه، لا إله إلا اللَّه وحده، لا شريك له، له الملك، وله الحمد، وهو على كل شيء قدير، رب أسألك خير ما في هذا اليوم، وخير ما بعده، وأعوذ بك من شر ما في هذا اليوم، وشر ما بعده، رب أعوذ بك من الكسل وسوء الكبر، رب أعوذ بك من عذاب في النار، وعذاب في القبر

اللهم إني أسالك العافية في الدنيا والآخرة، اللهم إني أسالك العفو والعافية، في ديني ودنياي، وأهلى ومالي، اللهم استر عوراتي، وآمن روعاتي، اللهم احفظنى من بين يَدَىَّ، ومن خلفي، وعن يميني، وعن شمالي، ومن فوقي، وأعوذ بعظمتك أن أغتال من تحتي

اللهم إني أسألك علما نافعا، ورزقا طيبا، وعملا متقبلا

أصبحت أُثني عليك حمدا، وأشهد أن لا إله إلا اللَّه

(ثلاث مرات)

بسم اللَّه الذى لا يَضُرُّ مع اسمه شيء في الأرض ولا في السماء، وهو السميع العليم 

(ثلاث مرات)

سبحان اللَّه عدد خلقه، سبحان اللَّه رضا نفسه، سبحان اللَّه زنة عرشه، سبحان اللَّه مداد كلماته 

(ثلاث مرات)

اللهم عافني في بدني، اللهم عافني في سمعي، اللهم عافني في بصري، لا إله إلا أنت 

(ثلاث مرات)

اللهم إني أعوذ بك من الكفر والفقر، اللهم إني أعوذ بك من عذاب القبر، لا إله إلا أنت

(ثلاث مرات)

سور الإخلاص والمعوذتين

(ثلاث مرات: للتشغيل أضغط مطولا على الشاشة أو أضغط زر القائمة)

حَسْبِيَ اللَّهُ، لا إلهَ إلَّا هُوَ، عَلَيْهِ تَوَكَّلْتُ، وَهُوَ رَبُّ العَرشِ العَظِيمِ

(سبع مرات)

اللهم إني أصبحت أُشهِدُك وأُشهِدُ حَمَلَةَ عرشك، وملائكتك، وجميع خلقك، أنك أنت اللَّه، لا إله إلا أنت، وأن محمدا عبدُك ورسولُك 

(أربع مرات)

لا إله إلا اللَّه وحده، لاشريك له، له الملك، وله الحمد، يُحيي ويُميت، وهو على كل شيء قدير 

(عشر مرات)

اللهم صل على محمد وعلى آل محمد، كما صليت على إبراهيم وعلى آل إبراهيم، إنك حميد مجيد، اللهم بارك على محمد وعلى آل محمد، كما باركت على إبراهيم وعلى آل إبراهيم، إنك حميد مجيد

(عشر مرات)

سبحان اللَّه وبحمده
أو: سبحان اللَّه العظيم وبحمده 

(مائة مرة أو أكثر)

أستغفر اللَّه 

(مائة مرة)

سبحان اللَّه 

(مائة مرة أو أكثر)

الحمدُ للَّه 

(مائة مرة أو أكثر)

اللَّه أكبر 

(مائة مرة أو أكثر)

لا إله إلا اللَّه وحده، لا شريك له، له الملك، وله الحمد، وهو على كل شيء قدير 

(مائة مرة أو أكثر)

سبحان اللَّه وبحمده، سبحانك اللهم وبحمدك، أشهد أن لا إله إلا أنت، أستغفرك، وأتوب إليك
        "
    </string>

    <string name="evening_azkar">
        "أذكار المساء

أمسينا على فِطرَة الإسلام، وكلمة الإخلاص، ودين نبينا محمد (صلى اللَّه عليه وسلم)، وملة أبينا إبراهيم، حنيفا مسلما، وما كان من المشركين

رضِيت باللَّه ربا، وبالإسلام دينا، وبمحمد (صلى اللَّه عليه وسلم) نبيا

اللهم بك أمسينا، وبك أصبحنا، وبك نحيا، وبك نموت، وإليك المصير

لا إله إلا اللَّه وحده، لا شريك له، له الملك، وله الحمد، وهو على كل شىء قدير

يا حي يا قيوم برحمتك أستغيث، أصلح لي شأني كله، ولا تكلني إلى نفسي طَرْفَةَ عين أبدا

آية الكرسي 
 
(للتشغيل أضغط مطولا على الشاشة أو أضغط زر القائمة)

اللهم أنت ربي، لا إله إلا أنت، خلقتني، وأنا عبدُك، وأنا على عهدك ووعدك ما استطعت، أعوذ بك من شر ما صنعت، أبوء* لك بنعمتك عليَّ، وأبوء بذنبي، فاغفر لي، فإنه لا يغفر الذنوب إلا أنت

(أبوءُ معناها أعترف)

اللهم فاطِرَ السموات والأرض، عالم الغيب والشهادة، رب كل شىء ومليكه، أشهد أن لا إله إلا أنت، أعوذ بك من شر نفسي، وشر الشيطان وشِركِهِ، وأن أقترف على نفسي سوءا، أو أَجُرَّهُ إلى مسلم

أمسينا وأمسى الملك للَّه، والحمد للَّه، لا إله إلا اللَّه وحده، لا شريك له، له الملك، وله الحمد، وهو على كل شيء قدير، ربِّ أسألك خير ما فى هذه الليلة، وخير ما بعدها، وأعوذ بك من شر ما في هذه الليلة، وشر ما بعدها، رب أعوذ بك من الكسل وسوء الكبر، رب أعوذ بك من عذاب في النار، وعذاب في القبر

اللهم إني أسألك العافية في الدنيا والآخرة، اللهم إني أسألك العفو والعافية في ديني ودنياي، وأهلي ومالي، اللهم استر عوراتي، وآمن روعاتي، اللهم احفظنى من بين يَدَىَّ، ومن خلفي، وعن يميني، وعن شمالي، ومن فوقي، وأعوذ بعظمتك أن أغتال من تحتي

أعوذ بكلمات اللَّه التامات من شر ما خلق 

(ثلاث مرات)

أمسيت أُثني عليك حمدا، وأشهد أن لا إله إلا اللَّه

(ثلاث مرات)

بسم اللَّه الذى لا يَضُرُّ مع اسمه شيء في الأرض ولا في السماء، وهو السميع العليم 

(ثلاث مرات)

اللهم عافني في بدني، اللهم عافني في سمعي، اللهم عافني في بصري، لا إله إلا أنت 

(ثلاث مرات)

اللهم إني أعوذ بك من الكفر والفقر، اللهم إني أعوذ بك من عذاب القبر، لا إله إلا أنت 

(ثلاث مرات)

سور الإخلاص والمعوذتين

(ثلاث مرات: للتشغيل أضغط مطولا على الشاشة أو أضغط زر القائمة)

حَسْبِيَ اللَّهُ، لا إلهَ إلَّا هُوَ، عَلَيْهِ تَوَكَّلْتُ، وَهُوَ رَبُّ العَرشِ العَظِيمِ

(سبع مرات)

اللهم إني أمسيت أُشهِدُك وأُشهِدُ حَمَلَةَ عرشك، وملائكتك، وجميع خلقك، أنك أنت اللَّه، لا إله إلا أنت، وأن محمدا عبدُك ورسولُك 

(أربع مرات)

لا إله إلا اللَّه وحده، لا شريك له، له الملك، وله الحمد، يُحيي ويُميت، وهو على كل شيء قدير 

(عشر مرات)

اللهم صل على محمد وعلى آل محمد، كما صليت على إبراهيم وعلى آل إبراهيم، إنك حميد مجيد، اللهم بارك على محمد وعلى آل محمد، كما باركت على إبراهيم وعلى آل إبراهيم، إنك حميد مجيد

(عشر مرات)

سبحان اللَّه وبحمده
أو سبحان اللَّه العظيم وبحمده 

(مائة مرة أو أكثر)

سبحان اللَّه

(مائة مرة أو أكثر)

الحمدُ للَّه

(مائة مرة أو أكثر)

اللَّه أكبر

(مائة مرة أو أكثر)

لا إله إلا اللَّه وحده، لا شريك له، له الملك، وله الحمد، وهو على كل شيء قدير 

(مائة مرة أو أكثر)

سبحان اللَّه وبحمده، سبحانك اللهم وبحمدك، أشهد أن لا إله إلا أنت، أستغفرك، وأتوب إليك
        "
    </string>
</resources>
